codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step6_finish_cat_bar.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: active_blob(&chat)
---
• Explored step 4/4
  └ List ls -la
    Read foo.txt, bar.txt
